@@ -30,11 +30,8 @@ import io.camunda.zeebe.util.Either;
 import io.camunda.zeebe.util.FileUtil;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.file.AtomicMoveNotSupportedException;
-import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
 import java.util.Collections;
 import java.util.ConcurrentModificationException;
 import java.util.HashSet;
@@ -44,7 +41,6 @@ import java.util.Set;
 import java.util.concurrent.CopyOnWriteArraySet;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -291,10 +287,7 @@ public final class FileBasedSnapshotStore extends Actor
     final CompletableActorFuture<Void> abortFuture = new CompletableActorFuture<>();
     actor.run(
         () -> {
-          final var abortedAll =
-              pendingSnapshots.stream()
-                  .map(PersistableSnapshot::abort)
-                  .collect(Collectors.toList());
+          final var abortedAll = pendingSnapshots.stream().map(PersistableSnapshot::abort).toList();
           actor.runOnCompletion(
               abortedAll,
               error -> {
@@ -351,7 +344,8 @@ public final class FileBasedSnapshotStore extends Actor
   }
 
   @Override
-  public FileBasedReceivedSnapshot newReceivedSnapshot(final String snapshotId) {
+  public ActorFuture<FileBasedReceivedSnapshot> newReceivedSnapshot(final String snapshotId) {
+    final var newSnapshotFuture = new CompletableActorFuture<FileBasedReceivedSnapshot>();
     final var optSnapshotId = FileBasedSnapshotId.ofFileName(snapshotId);
     final var parsedSnapshotId =
         optSnapshotId.orElseThrow(
@@ -361,7 +355,31 @@ public final class FileBasedSnapshotStore extends Actor
                         + snapshotId
                         + "'."));
 
-    final var directory = buildSnapshotDirectory(parsedSnapshotId);
+    actor.run(
+        () -> {
+          final var directory = buildSnapshotDirectory(parsedSnapshotId);
+          try {
+            checkAndCleanupExistingDirectory(snapshotId, parsedSnapshotId, directory);
+            createReceivedSnapshot(parsedSnapshotId, directory, newSnapshotFuture);
+          } catch (final Exception e) {
+            newSnapshotFuture.completeExceptionally(e);
+          }
+        });
+    return newSnapshotFuture;
+  }
+
+  private void createReceivedSnapshot(
+      final FileBasedSnapshotId parsedSnapshotId,
+      final Path directory,
+      final CompletableActorFuture<FileBasedReceivedSnapshot> newSnapshotFuture) {
+    final var newPendingSnapshot =
+        new FileBasedReceivedSnapshot(parsedSnapshotId, directory, this, actor);
+    addPendingSnapshot(newPendingSnapshot);
+    newSnapshotFuture.complete(newPendingSnapshot);
+  }
+
+  private void checkAndCleanupExistingDirectory(
+      final String snapshotId, final FileBasedSnapshotId parsedSnapshotId, final Path directory) {
     if (directory.toFile().exists()) {
       if (!buildSnapshotsChecksumPath(parsedSnapshotId).toFile().exists()) {
         try {
@@ -381,10 +399,6 @@ public final class FileBasedSnapshotStore extends Actor
                 snapshotId));
       }
     }
-    final var newPendingSnapshot =
-        new FileBasedReceivedSnapshot(parsedSnapshotId, directory, this, actor);
-    addPendingSnapshot(newPendingSnapshot);
-    return newPendingSnapshot;
   }
 
   @Override
@@ -594,21 +608,6 @@ public final class FileBasedSnapshotStore extends Actor
     purgePendingSnapshots(newPersistedSnapshot.getSnapshotId());
   }
 
-  private void moveToSnapshotDirectory(final Path directory, final Path destination) {
-    try {
-      tryAtomicDirectoryMove(directory, destination);
-    } catch (final FileAlreadyExistsException e) {
-      LOGGER.debug(
-          "Expected to move snapshot from {} to {}, but it already exists",
-          directory,
-          destination,
-          e);
-    } catch (final IOException e) {
-      rollbackPartialSnapshot(destination);
-      throw new UncheckedIOException(e);
-    }
-  }
-
   private void rollbackPartialSnapshot(final Path destination) {
     try {
       FileUtil.deleteFolderIfExists(destination);
@@ -628,20 +627,6 @@ public final class FileBasedSnapshotStore extends Actor
     } catch (final IOException e) {
       LOGGER.warn("Failed to delete not completed (orphaned) snapshot {}", pendingSnapshot, e);
     }
-  }
-
-  private void tryAtomicDirectoryMove(final Path directory, final Path destination)
-      throws IOException {
-    try {
-      FileUtil.moveDurably(directory, destination, StandardCopyOption.ATOMIC_MOVE);
-    } catch (final AtomicMoveNotSupportedException e) {
-      LOGGER.warn("Atomic move not supported. Moving the snapshot files non-atomically", e);
-      FileUtil.moveDurably(directory, destination);
-    }
-  }
-
-  private Path buildPendingSnapshotDirectory(final SnapshotId id) {
-    return pendingDirectory.resolve(id.getSnapshotIdAsString());
   }
 
   private Path buildSnapshotDirectory(final FileBasedSnapshotId snapshotId) {
